--- a/config/database.yml
+++ b/config/database.yml
@@ -30,4 +30,4 @@ production:
   username: root
   password: r00t 
   host: localhost
-  socket: socket: <%= ['/var/lib/mysql/mysql.sock', '/var/run/mysqld/mysqld.sock'].detect{ |socket| File.exist?(socket) } %>
+  socket: <%= ['/var/lib/mysql/mysql.sock', '/var/run/mysqld/mysqld.sock'].detect{ |socket| File.exist?(socket) } %>
